# nn-inbox-api-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nn_inbox_api/: __init__.py  main.py
