[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-inbox-api"
version = "0.1.4"
description = "A Python wrapper for the Notesnook Inbox API."
authors = [
    {name = "Chloe Oletto", email = "NeedsChloesure@riseup.net"},
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-gnupg", "requests"]
keywords = ["Notesnook", "Notesnook-Inbox", "Notesnook Inbox"]

[project.urls]
Repository = "https://github.com/NeedsChloesure/nn-inbox-api-py"

[tool.setuptools.packages.find]
where = ["src"]